feat(pages): better style for links

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@heroicons/react": "^2.2.0",
     "@number-flow/react": "^0.5.9",
+    "@types/maplibre-gl": "^1.14.0",
     "framer-motion": "^12.6.5",
     "jsdom": "^26.1.0",
     "maplibre-gl": "^5.3.0",
