--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "node-fetch": "^3.3.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-map-gl": "^8.0.3",
     "xlsx": "^0.18.5"
   },
