--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "maplibre-gl": "^5.3.0",
     "next": "15.3.0",
     "node-fetch": "^3.3.2",
+    "pdf-lib": "^1.17.1",
+    "pdfjs-dist": "^5.2.133",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-map-gl": "^8.0.3",
+    "react-pdf": "^9.2.1",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
@@ -40,5 +43,13 @@
     "tailwindcss": "^4.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5"
+  },
+  "pnpm": {
+    "ignoredBuiltDependencies": [
+      "canvas"
+    ],
+    "onlyBuiltDependencies": [
+      "canvas"
+    ]
   }
 }
