--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^5.2.133",
     "react": "^19.0.0",
+    "react-confetti": "^6.4.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-map-gl": "^8.0.3",
